values/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      securityContext:
        fsGroup: 999   # Typical group ID for the postgres user
        runAsUser: 999
      containers:
        - name: postgres
          image: postgres:16.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: petclinic-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: petclinic-db-storage
          persistentVolumeClaim:
            claimName: petclinic-db-pvc
