values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      securityContext:
        fsGroup: 999   # Typical group ID for the postgres user
        runAsUser: 999
      containers:
        - name: postgres
          image: postgres:16.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: petclinic-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: petclinic-db-storage
          persistentVolumeClaim:
            claimName: petclinic-db-pvc
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: spring
  labels:
    app: petclinic
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 25%
  minReadySeconds: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: $REGISTRY/$HARBOR_NAMESPACE/$APP_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Jakarta
