values/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: petclinic
  namespace: spring
spec:
  type: LoadBalancer
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 8080
